tests/rosetta/transpiler/Scala/crc-32-1.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/crc-32-1.scala:102: error: integer number too large
            word = xor(rshift(word, BigInt(1)), BigInt(3988292384))
                                                       ^
/workspace/mochi/tests/rosetta/transpiler/Scala/crc-32-1.scala:115: error: integer number too large
      var crc: BigInt = BigInt(4294967295)
                               ^
/workspace/mochi/tests/rosetta/transpiler/Scala/crc-32-1.scala:123: error: integer number too large
      return (BigInt(4294967295) - crc).asInstanceOf[BigInt]
                     ^
three errors found
